RESOLVED FIXED220628
Exceptions thrown when invoking a <select> on an iPhone-idiom app running on macOS
https://bugs.webkit.org/show_bug.cgi?id=220628
Summary Exceptions thrown when invoking a <select> on an iPhone-idiom app running on ...
Tim Horton
Reported 2021-01-14 11:58:54 PST
Exceptions thrown when invoking a <select> on an iPhone-idiom app running on macOS
Attachments
Patch (5.47 KB, patch)
2021-01-14 11:59 PST, Tim Horton
ews-feeder: commit-queue-
Patch (6.93 KB, patch)
2021-01-14 12:12 PST, Tim Horton
no flags
Tim Horton
Comment 1 2021-01-14 11:59:27 PST
Tim Horton
Comment 2 2021-01-14 11:59:29 PST
Wenson Hsieh
Comment 3 2021-01-14 12:01:20 PST
Comment on attachment 417637 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=417637&action=review r=mews > Source/WebKit/ChangeLog:26 > + currentUserInterfaceIdiomIsPadOrMac now does what it says on the tin, globally; Nice.
Tim Horton
Comment 4 2021-01-14 12:12:07 PST
EWS
Comment 5 2021-01-14 12:56:06 PST
Committed r271497: <https://trac.webkit.org/changeset/271497> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417642 [details].
Note You need to log in before you can comment on or make changes to this bug.